fixed a problem with the dropdown-content not stretching the full width of the container

--- a/css/styles.css
+++ b/css/styles.css
@@ -214,6 +214,7 @@ body {
         -ms-flex-direction: column;
             flex-direction: column;
     margin-left: 0;
+    width: 100%;
   }
 }
 
@@ -345,7 +346,7 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    min-width: 17.1875rem;
+    min-width: unset;
     width: 100%;
     -webkit-box-shadow: unset;
             box-shadow: unset;
