--- a/styles/sections/_header-and-CTA.scss
+++ b/styles/sections/_header-and-CTA.scss
@@ -77,6 +77,7 @@
                     @include mobileSize {
                         flex-direction: column;
                         margin-left: 0;
+                        width: 100%;
                     }
                     // this li holds the button and the dropdown-content
                     .menu__li {
@@ -175,7 +176,7 @@
                                 text-align: center;
                                 padding: $padding;
                                 flex-direction: column;
-                                min-width: rem(275px);
+                                min-width: unset;
                                 width: 100%;
                                 box-shadow: unset;
                             }
